--- a/_posts/2021-09-18-day4.md
+++ b/_posts/2021-09-18-day4.md
@@ -4,6 +4,7 @@ date: 2021-09-18
 categories:
 ---
 
+# A Must
 Education is a basic necessity for everyone in today's life. It makes you a better person, smart and differentiates you from other living beings.
 
 In a country like India education is still a luxury, not a necessity. We are a country with never-ending poverty and unemployment.
